--- a/infoIntro/Cpp-programming/basic.html
+++ b/infoIntro/Cpp-programming/basic.html
@@ -2,13 +2,13 @@
 <html lang="zh-Hant">
   <head>
 
-    <meta charset="big5">
-    <meta http-equiv="Content-Type" content="text/html; charset=big5" />
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>╕я╞T╙╨╦Й╛Л╥╖</title>
+    <title>Х─│Г▀╪Г └ХЁ┤Г╖▒Ф╕┌</title>
 
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106338304-1"></script>
@@ -87,37 +87,37 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a target="_self" class="navbar-brand" href=".">╕я╞T╙╨╦Й╛Л╥╖</a>
+        <a target="_self" class="navbar-brand" href=".">Х─│Г▀╪Г └ХЁ┤Г╖▒Ф╕┌</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a target="_self" class="nav-link" href="../index.html">╦Й╟T╛Л╖ч╥╖╫в
+              <a target="_self" class="nav-link" href="../index.html">ХЁ┤Х╗┼Г╖▒Ф┼─Ф╕┌Х╚√
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a target="_self" class="nav-link" href="../timeTable.html">╤i╚в╙М</a>
+              <a target="_self" class="nav-link" href="../timeTable.html">И─╡Е╨╕Х║╗</a>
             </li>
             <li class="nav-item">
-              <a target="_self" class="nav-link" href="../about.html">цЖ╘С╖з</a>
+              <a target="_self" class="nav-link" href="../about.html">И≈°Ф√╪Ф┬▒</a>
             </li>
             <li class="nav-item">
-              <a target="_self" class="nav-link" href="../info-system.html">дR╓s╦Й╟T╗t╡н</a>
+              <a target="_self" class="nav-link" href="../info-system.html">И╨≈Е╠╠ХЁ┤Х╗┼ГЁ╩Г╣╠</a>
             </li>
             <li class="nav-item">
-              <a target="_self" class="nav-link" href="../tour-plan.html">╝х╧C╜p╣e╝я</a>
+              <a target="_self" class="nav-link" href="../tour-plan.html">Ф≈┘И│┼Х╗┬Г∙╚Ф⌡╦</a>
             </li>
             <li class="nav-item dropdown active">
-              <a target="_self" href="#" id="drop1" class="nav-link dropdown-toggle" data-toggle="dropdown">C++╣{╕║Ё]╜p<b class="caret"></b></a>
+              <a target="_self" href="#" id="drop1" class="nav-link dropdown-toggle" data-toggle="dropdown">C++Г╗▀Е╪▐Х╗╜Х╗┬<b class="caret"></b></a>
               <div class="dropdown-menu bg-dark" aria-labelledby="drop1">
                 <ul class="navbar-nav-vert ml-auto" role="menu">
-                  <li class="nav-item"><a target="_self" class="nav-link" href="../Cpp-programming/index.html">C++╣{╕║Ё]╜p</a></li>
-                  <li class="nav-item active"><a target="_self" class="nav-link" href="../Cpp-programming/basic.html">╟Р╔╩цD</a></li>
-                  <li class="nav-item"><a target="_self" class="nav-link" href="../Cpp-programming/conditions.html">╠Ь╔С╕║</a></li>
-                  <li class="nav-item"><a target="_self" class="nav-link" href="../Cpp-programming/loops.html">╟j╟И</a></li>
+                  <li class="nav-item"><a target="_self" class="nav-link" href="../Cpp-programming/index.html">C++Г╗▀Е╪▐Х╗╜Х╗┬</a></li>
+                  <li class="nav-item active"><a target="_self" class="nav-link" href="../Cpp-programming/basic.html">Е÷╨Ф°╛И║▄</a></li>
+                  <li class="nav-item"><a target="_self" class="nav-link" href="../Cpp-programming/conditions.html">Ф╒²Д╩╤Е╪▐</a></li>
+                  <li class="nav-item"><a target="_self" class="nav-link" href="../Cpp-programming/loops.html">Х©╢Е°┬</a></li>
                 </ul>
               </div>
             </li>
@@ -128,9 +128,9 @@
     <header class="masthead" style="background: url('https://unsplash.it/1900/1080?image=668') no-repeat center center scroll">
     <div class="overlay">
       <div class="container">
-        <h1 class="display-1 text-white">╦Й╟T╛Л╖ч╥╖╫в</h1>
-        <h2 class="display-4 text-white">C++╣{╕║Ё]╜p</h2>
-        <p class="text-white">╟Р╔╩цD</p>
+        <h1 class="display-1 text-white">ХЁ┤Х╗┼Г╖▒Ф┼─Ф╕┌Х╚√</h1>
+        <h2 class="display-4 text-white">C++Г╗▀Е╪▐Х╗╜Х╗┬</h2>
+        <p class="text-white">Е÷╨Ф°╛И║▄</p>
       </div>
     </div>
   </header>
@@ -162,17 +162,17 @@
       </div>
       <div class="col-md-10 order-2">
         <div class="p-5">
-          <p>╕L╔XдR╓s╝у╨q║A╗C╔|╔y╢╚╓@╕Ф║A╕P╓@╕Ф╓╓╗C╔y╓╖╤║╔H╓@╜с╔Ч╖н╙е╔у║u║@║v╧j╤}║C</p>
+          <p>Е█╟Е┤╨И╨≈Е╠╠Ф═║Ф╜▄О╪▄Ф╞▐Е⌡⌡Е▐╔Ф▐⌡Д╦─Х║▄О╪▄Е░▄Д╦─Х║▄Д╦╜Ф╞▐Е▐╔Д╧▀И√⌠Д╩╔Д╦─Е─▀Е┘╗Е╫╒Г╘╨Г≥╫Ц─▄Ц──Ц─█И ■И√▀Ц─┌</p>
         </div>
       </div>
     </div>
     <div class="row align-items-center">
                   <div class="col-md-12">
               <div class="p-1">
-          <pre class="probRun">╙В╜╠╓s╓U║@╛У╪с╨Я╣║║@╠╘╖з╔ю╝у║@╘╤╨q╜╦╢╜
-╚C╛K╚T╗q║@еw╩E╓@╟С║@╙Y╖╓╛K╜╥║@╝v╧D╝О╙Ь
-╛Л╬г╓H╓Е║@╕U╬уЁсЁУ║@╜в╓v╣╫╦s║@╖с╝П╟╙╘Ы
-╨╛аж╛Э╚v║@╝Г╖У╙Б╙з║@╚eб╓╗Т╤V║@дR╓s╓╖╔З</pre>
+          <pre class="probRun">И┤▒И²╒Е╠╠Д╦▀Ц──Г╢┘Ф╗⌠Г╤═Г╙≈Ц──Ф┐÷Ф┬▒Ф╞█Ф═║Ц──Е╪╕Ф╜▄Иё⌡Ф▐ 
+И²▓Ф≤╔Д©┼Г╖─Ц──Ф╜║Х│ Д╦─Е═┌Ц──Ф╛ёЕ²░Ф≤╔И╒╗Ц──Е╦╚И│⌠Ф╝╥И∙╥
+Г╖▒Е╜╦Д╨╨Ф√┤Ц──Е░└Ф⌠┘Е▀²Е═╢Ц──Д©╝Е╥╠Е√└Г╬╓Ц──Е©≈Ф╟ёИ╚≤Ф≤┌
+Ф╪╙Х╪©Г╬▌Е⌠┴Ц──Ф║┐Ф²▌Х┼╛Х┼ЁЦ──Е┴█Г·╩Е█⌠Х╤┼Ц──И╨≈Е╠╠Д╧▀Е┘┴</pre>
         </div>
       </div>
           </div>
@@ -205,21 +205,21 @@
       </div>
       <div class="col-md-10 order-2">
         <div class="p-5">
-          <p>еЩ╗о╔н╙л©И╓J╜^╔╢╕r╪ф║A╗л╥с╓╫╕║╜p╨Б╔X╕й╓ю╪ф║C<br>╓╫╕║╛╟║G╕й╓ю╪ф=╕r╪ф*2+30</p>
+          <p>Х╝⌠Д╫©Г■╗Х─┘Х╪╦Е┘╔Х▀╠Ф┴⌠Е╜≈Ф∙╦О╪▄Д╬²Г┘╖Е┘╛Е╪▐Х╗┬Г╝≈Е┤╨Г≥╬Е┬├Ф∙╦Ц─┌<br>Е┘╛Е╪▐Г┌╨О╪ Г≥╬Е┬├Ф∙╦=Е╜≈Ф∙╦*2+30</p>
         </div>
       </div>
     </div>
     <div class="row align-items-center">
                   <div class="col-md-6">
               <div class="p-1">
-          <pre class="probRun">╫п©И╓J╗C╓юда╕r╪ф║G<i>20</i>
-╖A╙╨╜^╔╢╕╗аZ╛O <i>70</i>╓ю</pre>
+          <pre class="probRun">Х╚▀Х╪╦Е┘╔Ф╞▐Е┬├И░≤Е╜≈Ф∙╦О╪ <i>20</i>
+Д╫═Г └Х▀╠Ф┴⌠Ф┬░Г╦╬Ф≤╞ <i>70</i>Е┬├</pre>
         </div>
       </div>
                   <div class="col-md-6">
               <div class="p-1">
-          <pre class="probRun">╫п©И╓J╗C╓юда╕r╪ф║G<i>15</i>
-╖A╙╨╜^╔╢╕╗аZ╛O <i>60</i>╓ю</pre>
+          <pre class="probRun">Х╚▀Х╪╦Е┘╔Ф╞▐Е┬├И░≤Е╜≈Ф∙╦О╪ <i>15</i>
+Д╫═Г └Х▀╠Ф┴⌠Ф┬░Г╦╬Ф≤╞ <i>60</i>Е┬├</pre>
         </div>
       </div>
           </div>
@@ -252,21 +252,21 @@
       </div>
       <div class="col-md-10 order-2">
         <div class="p-5">
-          <p>еЩ╗о╔н╙л©И╓J╜^╔╢╕r╪ф║A╗л╥с╓╫╕║╜p╨Б╔X╕й╓ю╪ф╚А║A╕L╔X╗Д╓ю╪ф╛O╖_╕Ё╓н╝Ф║C(╢╚╨Б╓╫╕║╕P╓W║A╓н╝Ф╛╟60╓ю╔H╓W)</p>
+          <p>Х╝⌠Д╫©Г■╗Х─┘Х╪╦Е┘╔Х▀╠Ф┴⌠Е╜≈Ф∙╦О╪▄Д╬²Г┘╖Е┘╛Е╪▐Х╗┬Г╝≈Е┤╨Г≥╬Е┬├Ф∙╦Е╬▄О╪▄Е█╟Е┤╨Е┘╤Е┬├Ф∙╦Ф≤╞Е░╕Ф°┴Е▐┼Ф═╪Ц─┌(Ф▐⌡Г╝≈Е┘╛Е╪▐Е░▄Д╦┼О╪▄Е▐┼Ф═╪Г┌╨60Е┬├Д╩╔Д╦┼)</p>
         </div>
       </div>
     </div>
     <div class="row align-items-center">
                   <div class="col-md-6">
               <div class="p-1">
-          <pre class="probRun">╫п©И╓J╗C╓юда╕r╪ф║G<i>12</i>
-╖A╙╨╜^╔╢╕╗аZ╛O <i>54</i>╓ю║A<i>╓ё╓н╝Ф</i></pre>
+          <pre class="probRun">Х╚▀Х╪╦Е┘╔Ф╞▐Е┬├И░≤Е╜≈Ф∙╦О╪ <i>12</i>
+Д╫═Г └Х▀╠Ф┴⌠Ф┬░Г╦╬Ф≤╞ <i>54</i>Е┬├О╪▄<i>Д╦█Е▐┼Ф═╪</i></pre>
         </div>
       </div>
                   <div class="col-md-6">
               <div class="p-1">
-          <pre class="probRun">╫п©И╓J╗C╓юда╕r╪ф║G<i>15</i>
-╖A╙╨╜^╔╢╕╗аZ╛O <i>60</i>╓ю║A<i>╓н╝Ф</i></pre>
+          <pre class="probRun">Х╚▀Х╪╦Е┘╔Ф╞▐Е┬├И░≤Е╜≈Ф∙╦О╪ <i>15</i>
+Д╫═Г └Х▀╠Ф┴⌠Ф┬░Г╦╬Ф≤╞ <i>60</i>Е┬├О╪▄<i>Е▐┼Ф═╪</i></pre>
         </div>
       </div>
           </div>
@@ -299,30 +299,30 @@
       </div>
       <div class="col-md-10 order-2">
         <div class="p-5">
-          <p>еЩ╗о╔н╙л©И╓J╓╜╕╦╜^╔╢╕r╪ф║A╕L╔X╗Д╓╓Ёл╟╙╙╨╕й╓ю╪ф║C(╢╚╨Б╓╫╕║╕P╓W)</p>
+          <p>Х╝⌠Д╫©Г■╗Х─┘Х╪╦Е┘╔Д╨■Ф╛║Х▀╠Ф┴⌠Е╜≈Ф∙╦О╪▄Е█╟Е┤╨Е┘╤Д╦╜Ф°─И╚≤Г └Г≥╬Е┬├Ф∙╦Ц─┌(Ф▐⌡Г╝≈Е┘╛Е╪▐Е░▄Д╦┼)</p>
         </div>
       </div>
     </div>
     <div class="row align-items-center">
                   <div class="col-md-6">
               <div class="p-1">
-          <pre class="probRun">╫п©И╓J╗C╓юда╕r╪ф║G<i>12</i>
-╫п©И╓J╗C╓юда╕r╪ф║G<i>16</i>
-╫п©И╓J╗C╓юда╕r╪ф║G<i>14</i>
-╫п©И╓J╗C╓юда╕r╪ф║G<i>11</i>
-╫п©И╓J╗C╓юда╕r╪ф║G<i>13</i>
-Ёл╟╙╓ю╪ф╛O <i>62</i>╓ю
+          <pre class="probRun">Х╚▀Х╪╦Е┘╔Ф╞▐Е┬├И░≤Е╜≈Ф∙╦О╪ <i>12</i>
+Х╚▀Х╪╦Е┘╔Ф╞▐Е┬├И░≤Е╜≈Ф∙╦О╪ <i>16</i>
+Х╚▀Х╪╦Е┘╔Ф╞▐Е┬├И░≤Е╜≈Ф∙╦О╪ <i>14</i>
+Х╚▀Х╪╦Е┘╔Ф╞▐Е┬├И░≤Е╜≈Ф∙╦О╪ <i>11</i>
+Х╚▀Х╪╦Е┘╔Ф╞▐Е┬├И░≤Е╜≈Ф∙╦О╪ <i>13</i>
+Ф°─И╚≤Е┬├Ф∙╦Ф≤╞ <i>62</i>Е┬├
 </pre>
         </div>
       </div>
                   <div class="col-md-6">
               <div class="p-1">
-          <pre class="probRun">╫п©И╓J╗C╓юда╕r╪ф║G<i>9</i>
-╫п©И╓J╗C╓юда╕r╪ф║G<i>14</i>
-╫п©И╓J╗C╓юда╕r╪ф║G<i>20</i>
-╫п©И╓J╗C╓юда╕r╪ф║G<i>16</i>
-╫п©И╓J╗C╓юда╕r╪ф║G<i>22</i>
-Ёл╟╙╓ю╪ф╛O <i>74</i>╓ю</pre>
+          <pre class="probRun">Х╚▀Х╪╦Е┘╔Ф╞▐Е┬├И░≤Е╜≈Ф∙╦О╪ <i>9</i>
+Х╚▀Х╪╦Е┘╔Ф╞▐Е┬├И░≤Е╜≈Ф∙╦О╪ <i>14</i>
+Х╚▀Х╪╦Е┘╔Ф╞▐Е┬├И░≤Е╜≈Ф∙╦О╪ <i>20</i>
+Х╚▀Х╪╦Е┘╔Ф╞▐Е┬├И░≤Е╜≈Ф∙╦О╪ <i>16</i>
+Х╚▀Х╪╦Е┘╔Ф╞▐Е┬├И░≤Е╜≈Ф∙╦О╪ <i>22</i>
+Ф°─И╚≤Е┬├Ф∙╦Ф≤╞ <i>74</i>Е┬├</pre>
         </div>
       </div>
           </div>
@@ -365,20 +365,20 @@
       </div>
       <div class="col-md-10 order-2">
         <div class="p-5">
-          <p>еЩ╗о╔н╙л©И╓JN║A╗л╖г╕L╔X1~N║A╓╓╤║╔н╓@╜с╙е╝Ф╓ю╤}║C</p>
+          <p>Х╝⌠Д╫©Г■╗Х─┘Х╪╦Е┘╔NО╪▄Д╬²Е╨▐Е█╟Е┤╨1~NО╪▄Д╦╜И√⌠Г■╗Д╦─Е─▀Г╘╨Ф═╪Е┬├И√▀Ц─┌</p>
         </div>
       </div>
     </div>
     <div class="row align-items-center">
                   <div class="col-md-6">
               <div class="p-1">
-          <pre class="probRun">╫п©И╓JN║G<i>5</i>
+          <pre class="probRun">Х╚▀Х╪╦Е┘╔NО╪ <i>5</i>
 <i>1 2 3 4 5 </i></pre>
         </div>
       </div>
                   <div class="col-md-6">
               <div class="p-1">
-          <pre class="probRun">╫п©И╓JN║G<i>10</i>
+          <pre class="probRun">Х╚▀Х╪╦Е┘╔NО╪ <i>10</i>
 <i>1 2 3 4 5 6 7 8 9 10</i></pre>
         </div>
       </div>
@@ -422,14 +422,14 @@
       </div>
       <div class="col-md-10 order-2">
         <div class="p-5">
-          <p>╗о╔н╙л©И╓JN║A╗л╥с╛ш╧О╕Л╦m╕L╔XN*N╓Х╝Ф╙╨╕U╜сбI╝y╪п</p>
+          <p>Д╫©Г■╗Х─┘Х╪╦Е┘╔NО╪▄Д╬²Г┘╖Г⌡╦Е╟█Д╫█Г╫╝Е█╟Е┤╨N*NФ√╧Ф═╪Г └Е░└Е─▀И╩·Е╨╖Ф╗≥</p>
         </div>
       </div>
     </div>
     <div class="row align-items-center">
                   <div class="col-md-6">
               <div class="p-1">
-          <pre class="probRun">╫п©И╓JN║G<i>3</i>
+          <pre class="probRun">Х╚▀Х╪╦Е┘╔NО╪ <i>3</i>
 <i>(1,1)	(1,2)	(1,3)	
 (2,1)	(2,2)	(2,3)	
 (3,1)	(3,2)	(3,3)</i></pre>
@@ -437,7 +437,7 @@
       </div>
                   <div class="col-md-6">
               <div class="p-1">
-          <pre class="probRun">╫п©И╓JN║G<i>9</i>
+          <pre class="probRun">Х╚▀Х╪╦Е┘╔NО╪ <i>9</i>
 <i>(1,1)	(1,2)	(1,3)	(1,4)	(1,5)	(1,6)	(1,7)	(1,8)	(1,9)	
 (2,1)	(2,2)	(2,3)	(2,4)	(2,5)	(2,6)	(2,7)	(2,8)	(2,9)	
 (3,1)	(3,2)	(3,3)	(3,4)	(3,5)	(3,6)	(3,7)	(3,8)	(3,9)	
@@ -489,7 +489,7 @@
       </div>
       <div class="col-md-10 order-2">
         <div class="p-5">
-          <p>╗л╥с╛ш╧О╕Л╦m╕L╔X╓E╓E╜╪╙k╙М</p>
+          <p>Д╬²Г┘╖Г⌡╦Е╟█Д╫█Г╫╝Е█╟Е┤╨Д╧²Д╧²Д╧≤ФЁ∙Х║╗</p>
         </div>
       </div>
     </div>
@@ -547,20 +547,20 @@
       </div>
       <div class="col-md-10 order-2">
         <div class="p-5">
-          <p>еЩ╗о╔н╙л©И╓JN║A╕L╔X╓@╜с╔я╛P╦╧*╠ф╕╗║A╙Ь╚в╛╟N╙╨╬Н╫u</p>
+          <p>Х╝⌠Д╫©Г■╗Х─┘Х╪╦Е┘╔NО╪▄Е█╟Е┤╨Д╦─Е─▀Г■╠Ф≤÷Х≥÷*Ф▌▓Ф┬░О╪▄И∙╥Е╨╕Г┌╨NГ └Ф╘╚Г╥ </p>
         </div>
       </div>
     </div>
     <div class="row align-items-center">
                   <div class="col-md-6">
               <div class="p-1">
-          <pre class="probRun">╫п©И╓JN║G<i>7</i>
+          <pre class="probRun">Х╚▀Х╪╦Е┘╔NО╪ <i>7</i>
 <i>*******</i></pre>
         </div>
       </div>
                   <div class="col-md-6">
               <div class="p-1">
-          <pre class="probRun">╫п©И╓JN║G<i>3</i>
+          <pre class="probRun">Х╚▀Х╪╦Е┘╔NО╪ <i>3</i>
 <i>***</i></pre>
         </div>
       </div>
@@ -594,14 +594,14 @@
       </div>
       <div class="col-md-10 order-2">
         <div class="p-5">
-          <p>╗о╔н╙л©И╓JN║A╔н╛P╦╧*╠ф╔X╘Ё╘M╟╙╛р╛╟N╙╨╔╙╓U╣╔╦y╙╫╗╓╓T╗╓╖н</p>
+          <p>Д╫©Г■╗Х─┘Х╪╦Е┘╔NО╪▄Г■╗Ф≤÷Х≥÷*Ф▌▓Е┤╨Е╨∙Е▓▄И╚≤Г ├Г┌╨NГ └Е╥╕Д╦▀Г╜┴Х┘╟Г⌡╢Х╖▓Д╦┴Х╖▓Е╫╒</p>
         </div>
       </div>
     </div>
     <div class="row align-items-center">
                   <div class="col-md-6">
               <div class="p-1">
-          <pre class="probRun">╫п©И╓JN║G<i>3</i>
+          <pre class="probRun">Х╚▀Х╪╦Е┘╔NО╪ <i>3</i>
 <i>*
 **
 ***</i></pre>
@@ -609,7 +609,7 @@
       </div>
                   <div class="col-md-6">
               <div class="p-1">
-          <pre class="probRun">╫п©И╓JN║G<i>5</i>
+          <pre class="probRun">Х╚▀Х╪╦Е┘╔NО╪ <i>5</i>
 <i>*
 **
 ***
@@ -647,14 +647,14 @@
       </div>
       <div class="col-md-10 order-2">
         <div class="p-5">
-          <p>╗о╔н╙л©И╓JN║A╔н╛P╦╧*╠ф╔X╘Ё╘M╟╙╛р╛╟N╙╨╔k╓U╣╔╦y╙╫╗╓╓T╗╓╖н</p>
+          <p>Д╫©Г■╗Х─┘Х╪╦Е┘╔NО╪▄Г■╗Ф≤÷Х≥÷*Ф▌▓Е┤╨Е╨∙Е▓▄И╚≤Г ├Г┌╨NГ └Е▐ЁД╦▀Г╜┴Х┘╟Г⌡╢Х╖▓Д╦┴Х╖▓Е╫╒</p>
         </div>
       </div>
     </div>
     <div class="row align-items-center">
                   <div class="col-md-6">
               <div class="p-1">
-          <pre class="probRun">╫п©И╓JN║G<i>3</i>
+          <pre class="probRun">Х╚▀Х╪╦Е┘╔NО╪ <i>3</i>
 <i>  *
  **
 ***</i></pre>
@@ -662,7 +662,7 @@
       </div>
                   <div class="col-md-6">
               <div class="p-1">
-          <pre class="probRun">╫п©И╓JN║G<i>9</i>
+          <pre class="probRun">Х╚▀Х╪╦Е┘╔NО╪ <i>9</i>
 <i>        *
        **
       ***
