--- a/infoIntro/Cpp-programming/conditions.html
+++ b/infoIntro/Cpp-programming/conditions.html
@@ -572,15 +572,35 @@
           <pre class="probRun">本程式將輸入任意三邊長，判斷可否構成三角形？並判斷構成哪一種三角形。
 請輸入三個邊長數值，並以空白鍵隔開：<i>90 20 100</i>
 <i>90 20 100可以</i>構成三角形
-為<i>銳角三角形</i></pre>
+為<i>鈍角三角形</i></pre>
         </div>
       </div>
           </div>
     <div class="row align-items-center">
       <div class="col-md-12 order-2">
         <div class="p-1">
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-a07-0">ans1</button>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-a07-1">ans2</button>
                 </div>
       </div>
+    </div>
+        <div class="modal fade" id="mdl-ans-a07-0" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">a07-0</h5></div>
+        <div class="modal-body">
+          <img src="ans-a07-0.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
+    </div>
+        <div class="modal fade" id="mdl-ans-a07-1" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">a07-1</h5></div>
+        <div class="modal-body">
+          <img src="ans-a07-1.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
     </div>
       </div>
 </section>
