almost done. (TODO: loops b03~b05)

--- a/infoIntro/Cpp-programming/loops.html
+++ b/infoIntro/Cpp-programming/loops.html
@@ -635,8 +635,48 @@
     <div class="row align-items-center">
       <div class="col-md-12 order-2">
         <div class="p-1">
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b09-0">ans1</button>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b09-1">ans2</button>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b09-2">ans3</button>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b09-3">ans4</button>
                 </div>
       </div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b09-0" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b09-0</h5></div>
+        <div class="modal-body">
+          <img src="ans-b09-0.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b09-1" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b09-1</h5></div>
+        <div class="modal-body">
+          <img src="ans-b09-1.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b09-2" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b09-2</h5></div>
+        <div class="modal-body">
+          <img src="ans-b09-2.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b09-3" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b09-3</h5></div>
+        <div class="modal-body">
+          <img src="ans-b09-3.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
     </div>
       </div>
 </section>
@@ -666,8 +706,18 @@
     <div class="row align-items-center">
       <div class="col-md-12 order-2">
         <div class="p-1">
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b10-0">ans1</button>
                 </div>
       </div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b10-0" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b10-0</h5></div>
+        <div class="modal-body">
+          <img src="ans-b10-0.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
     </div>
       </div>
 </section>
@@ -705,8 +755,18 @@
     <div class="row align-items-center">
       <div class="col-md-12 order-2">
         <div class="p-1">
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b11-0">ans1</button>
                 </div>
       </div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b11-0" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b11-0</h5></div>
+        <div class="modal-body">
+          <img src="ans-b11-0.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
     </div>
       </div>
 </section>
@@ -798,8 +858,38 @@
     <div class="row align-items-center">
       <div class="col-md-12 order-2">
         <div class="p-1">
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b13-0">ans1</button>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b13-1">ans2</button>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b13-2">ans3</button>
                 </div>
       </div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b13-0" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b13-0</h5></div>
+        <div class="modal-body">
+          <img src="ans-b13-0.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b13-1" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b13-1</h5></div>
+        <div class="modal-body">
+          <img src="ans-b13-1.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b13-2" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b13-2</h5></div>
+        <div class="modal-body">
+          <img src="ans-b13-2.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
     </div>
       </div>
 </section>
@@ -814,7 +904,7 @@
       </div>
       <div class="col-md-10 order-2">
         <div class="p-5">
-          <p>一個數等於它所有的因數和，這種數我們叫它完全數﹝不包括它本身﹞<br>
+          <p>一個數等於它所有的因數和﹝不包括它本身﹞，這種數我們叫它完全數<br>
       像      6=1+2+3<br>
               28=1+2+4+7+14<br>
       請列印出10000之內，所有的完全數。</p>
@@ -832,8 +922,28 @@
     <div class="row align-items-center">
       <div class="col-md-12 order-2">
         <div class="p-1">
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b14-0">ans1</button>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b14-1">ans2</button>
                 </div>
       </div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b14-0" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b14-0</h5></div>
+        <div class="modal-body">
+          <img src="ans-b14-0.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b14-1" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b14-1</h5></div>
+        <div class="modal-body">
+          <img src="ans-b14-1.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
     </div>
       </div>
 </section>
