--- a/infoIntro/Cpp-programming/loops.html
+++ b/infoIntro/Cpp-programming/loops.html
@@ -287,8 +287,38 @@
     <div class="row align-items-center">
       <div class="col-md-12 order-2">
         <div class="p-1">
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b03-0">ans1</button>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b03-1">ans2</button>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b03-2">ans3</button>
                 </div>
       </div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b03-0" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b03-0</h5></div>
+        <div class="modal-body">
+          <img src="ans-b03-0.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b03-1" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b03-1</h5></div>
+        <div class="modal-body">
+          <img src="ans-b03-1.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b03-2" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b03-2</h5></div>
+        <div class="modal-body">
+          <img src="ans-b03-2.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
     </div>
       </div>
 </section>
@@ -326,8 +356,38 @@
     <div class="row align-items-center">
       <div class="col-md-12 order-2">
         <div class="p-1">
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b04-0">ans1</button>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b04-1">ans2</button>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b04-2">ans3</button>
                 </div>
       </div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b04-0" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b04-0</h5></div>
+        <div class="modal-body">
+          <img src="ans-b04-0.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b04-1" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b04-1</h5></div>
+        <div class="modal-body">
+          <img src="ans-b04-1.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b04-2" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b04-2</h5></div>
+        <div class="modal-body">
+          <img src="ans-b04-2.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
     </div>
       </div>
 </section>
@@ -365,8 +425,18 @@
     <div class="row align-items-center">
       <div class="col-md-12 order-2">
         <div class="p-1">
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b05-0">ans1</button>
                 </div>
       </div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b05-0" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b05-0</h5></div>
+        <div class="modal-body">
+          <img src="ans-b05-0.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
     </div>
       </div>
 </section>
