--- a/html/Cpp-programming/loops.html
+++ b/html/Cpp-programming/loops.html
@@ -627,6 +627,7 @@
                   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b08-1">ans2</button>
                   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b08-2">ans3</button>
                   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b08-3">ans4</button>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-b08-4">ans5</button>
                 </div>
       </div>
     </div>
@@ -662,6 +663,15 @@
         <div class="modal-header"><h5 class="modal-title">b08-3</h5></div>
         <div class="modal-body">
           <img src="ans-b08-3.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
+    </div>
+        <div class="modal fade" id="mdl-ans-b08-4" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">b08-4</h5></div>
+        <div class="modal-body">
+          <img src="ans-b08-4.png"></img>
         </div>
         <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
       </div></div>
