--- a/infoIntro/Cpp-programming/conditions.html
+++ b/infoIntro/Cpp-programming/conditions.html
@@ -597,7 +597,7 @@
           <pre class="probRun">本程式將輸入任意三邊長，判斷可否構成三角形？並判斷構成哪一種三角形。
 請輸入三個邊長數值，並以空白鍵隔開：<i>80 90 100</i>
 <i>80 90 100可以</i>構成三角形
-為<i>鈍角三角形</i></pre>
+為<i>銳角三角形</i></pre>
         </div>
       </div>
                   <div class="col-md-6">
