--- a/html/index1061.html
+++ b/html/index1061.html
@@ -92,12 +92,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
+            <li class="nav-item active">
               <a target="_self" class="nav-link" href="index.html">資訊科技概論
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a target="_self" class="nav-link" href="timeTable.html">進度表</a>
             </li>
             <li class="nav-item">
@@ -128,27 +128,123 @@
     <div class="overlay">
       <div class="container">
         <h1 class="display-1 text-white">資訊科技概論</h1>
-        <h2 class="display-4 text-white">106下 進度表</h2>
-        <p class="text-white"><a href="timeTable-1061.html">106上進度表</a></p>
+        <h2 class="display-4 text-white">106學年度‧上學期</h2>
+        <p class="text-white"><del>立志成為最潮的課程網站(?)</del></p>
       </div>
     </div>
   </header>
 
-  <!-- Main -->
+  <!-- main -->
   <section>
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-md-12 order-1">
+        <div class="col-md-6 order-2">
           <div class="p-5">
-            <!-- <p style="text-align: right"><a href="timeTable-1061.html">1061進度表</a></p> -->
-            <iframe src="https://docs.google.com/document/u/1/d/e/2PACX-1vTGcH6gZFHz87FHdNDzk8VBIXnYeoxLUNyz9HgFCjX3cP9MNTDg6dD6pdAuWYMQ5yB4IVCojUZJfyc9/pub?embedded=true" width="100%" height="1200" title="1061資訊科技概論進度表 101班、107班" style="border:#EEE solid 1px"></iframe>
-            <a href="https://docs.google.com/document/d/1lKajEviULZarY0mpmvEL9fZzRySs81chgY-2CDyrRuM/edit">doc</a>
+            <img class="img-fluid rounded-circle" src="https://unsplash.it/500/500?image=445" alt="">
+          </div>
+        </div>
+        <div class="col-md-6 order-1">
+          <div class="p-5">
+            <h2 class="display-4">麗山與它的資訊系統們</h2>
+            <p>要成為一個合格的麗山人，你至少要會收信吧...?</p>
+            <p>線上選社呢?查成績呢?</p>
+            <p>課程網站怎麼進去? &nbsp; &nbsp; --欸不是只有資訊科會用課程網站喔</p>
+            <p>什麼!? 課程網站有分三種!?</p>
+            <p>老師對不起我又忘記密碼了...orz</p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
+  <section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6 order-1">
+          <div class="p-5">
+            <img class="img-fluid rounded-circle" src="https://unsplash.it/500/500?image=403" alt="">
+          </div>
+        </div>
+        <div class="col-md-6 order-2">
+          <div class="p-5">
+            <h2 class="display-4">英文打字練習</h2>
+            <p>天下武功 唯快不破</p>
+            <p>要把資訊科學好，就要先練成打字神速無影手！<br>
+              (大概啦?)</p>
+            <p>打字測驗程式 - <a href="https://drive.google.com/open?id=0B65DH-sSwkNARVJjbHVZSlZxc00">WinWTS</a></p>
+            <p>f(n) = 2*n + 30 ， 測5次取較高分的3次平均</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6 order-2">
+          <div class="p-5">
+            <img class="img-fluid rounded-circle" src="https://images.unsplash.com/photo-1455390582262-044cdead277a?dpr=2&auto=format&fit=scale&w=300&h=300&q=80" alt="">
+          </div>
+        </div>
+        <div class="col-md-6 order-1">
+          <div class="p-5">
+            <h2 class="display-4">部落格寫作</h2>
+            <p>這是網路訊息爆炸的時代</p>
+            <p>充滿直播、影片、照片，或者只有一句話的即時訊息</p>
+            <p>想當年無名小站還在的時候...我們是怎麼思考的...?</p>
+            <p>(幾乎)每週一篇部落格文章，400字以上原創文字，嚴禁抄襲</p>
+            <p>如果是閱讀文章/新聞產生的心得，請附參考資料連結</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+
+  <section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6 order-1">
+          <div class="p-5">
+            <img class="img-fluid rounded-circle" src="https://unsplash.it/500/500?image=371" alt="">
+          </div>
+        </div>
+        <div class="col-md-6 order-2">
+          <div class="p-5">
+            <h2 class="display-4">旅遊計畫書</h2>
+            <p>放心吧其實沒有真的要出去玩 :p</p>
+            <p>學會使用google文件、試算表、簡報等等服務，讓小組合作更方便。</p>
+            <p>當然還要有精美排版啊</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6 order-2">
+            <div class="p-5">
+              <!--<img class="img-fluid rounded-circle" src="https://unsplash.it/500/500?image=1" alt="">-->
+              <img class="img-fluid rounded-circle" src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?dpr=1&auto=format&fit=crop&w=500&h=500&q=80&cs=tinysrgb&crop=" alt="">
+            </div>
+          </div>
+          <div class="col-md-6 order-1">
+            <div class="p-5">
+              <h2 class="display-4">C語言程式設計入門</h2>
+              <p>學習程式設計不是要每個人都成為軟體工程師，而是訓練系統化解決問題的方法和邏輯思維</p>
+              <p><del>好課值得一修再修(?)</del></p>
+              <p>很入門很入門</p>
+              <p>但是還是很可怕很可怕</p>
+              <p>哎呀反正你就專心用力把它聽懂，你就已經贏過全國87%(?)的人了<br>
+                真的！</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
         <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
